tests/neg/i7751.scala
import language.`3.3`
val a = Some(a=a,)=> // error // error // error
val a = Some(x=y,)=>
